# Metal-Flaw-Detecta

./: .gitignore  README.md  Surface_defects_detection.ipynb  dependencies.txt  main.py  manage.py  pyproject.toml  train.py
api/: models.py  serializers.py  urls.py  views.py
app/: package-lock.json
app/src/: App.js
app/src/components/: About.js  Admin.js  Disclaimer.js  Footer.js  Header.js  Home.js  Login.js  Navbar.js  Predict.js  Profile.js  Signup.js  Train.js
app/src/css/: index.css
frontend/: babel.config.json  package-lock.json  package.json  webpack.config.js
frontend/src/: index.js
frontend/static/frontend/: main.js
frontend/templates/frontend/: index.html
metalflawdetecta/: asgi.py  settings.py  urls.py  wsgi.py
model/: tests.py
model/defect_detector/: defect_detection.py  defect_training.py
model/trained_models/tensorboard/train/: events.out.tfevents.1751076975.codebook.2977.0.v2
model/trained_models/tensorboard/validation/: events.out.tfevents.1751077059.codebook.2977.1.v2
src/metal_flaw_detecta/: detection.py  training.py
tests/: test_accuracy.py
